Add icon + description update

--- a/mod.yml
+++ b/mod.yml
@@ -1,6 +1,6 @@
-title: KH2SephirothAS
-originalAuthor: You
-description: Generated on Fri, 24 May 2024 18:08:54 GMT
+title: Sephiroth's Absent Silhouette
+originalAuthor: Crazycatz00 and Svenchu
+description: Are you ready for getting rid of that save file that you kept just to fight Sephiroth without all the game completed? Now you can fight him as many times as you want and show him "how'd he likes that"!
 dependencies: 
 assets:
 - name: ard/fr/hb01.ard
